fixedscss item images stretching

--- a/src/sass/ShoppingCart.scss
+++ b/src/sass/ShoppingCart.scss
@@ -16,9 +16,10 @@
 		display: flex;
 		order: -2;
 		padding: 30px 0 0 30px;
+		
 
 		img {
-			width: 100px;
+			height: 200px;
 		}
 
 		h1,
